add web placeholder, server endpoint, migration, various fixes
