# server/src/controllers/asset.controller.ts
@@ -70,6 +70,11 @@ export class AssetController {
     return this.service.getStatistics(auth, dto);
   }
 
+  @Get('duplicates')
+  getAssetDuplicates(@Auth() auth: AuthDto): Promise<AssetResponseDto[]> {
+    return this.service.getDuplicates(auth);
+  }
+
   @Post('jobs')
   @HttpCode(HttpStatus.NO_CONTENT)
   runAssetJobs(@Auth() auth: AuthDto, @Body() dto: AssetJobsDto): Promise<void> {
